--- a/index.html
+++ b/index.html
@@ -3047,7 +3047,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
 <div class="produto limpeza"
      data-nomes="sabao querosene, sabão liquido, limpeza pesada, roupas, uso diario">
 
-  <img src="img/sabao-querosene.jpg" alt="Sabão Querosene">
+  <img src="img/querosene.jpg" alt="Sabão Querosene">
   <span class="icone-busca">🔍</span>
   <h3>Sabão Querosene</h3>
 
@@ -3058,7 +3058,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         'sabao-querosene-2l',
         'Sabão Querosene 2L',
         14,
-        'img/sabao-querosene.jpg',
+        'img/querosene.jpg',
         [
           { tamanho: '2L', preco: 14 },
           { tamanho: '5L', preco: 28 }
@@ -3223,7 +3223,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
 <div class="produto limpeza"
      data-nomes="alcool em gel, alcool gel, higienizante, limpeza, desinfetante">
 
-  <img src="img/alcool-em-gel.jpg" alt="Álcool em Gel">
+  <img src="img/alcool-gel.jpg" alt="Álcool em Gel">
   <span class="icone-busca">🔍</span>
   <h3>Álcool em Gel</h3>
 
@@ -3234,7 +3234,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         'alcool-gel-500ml',
         'Álcool em Gel 500ML',
         12,
-        'img/alcool-em-gel.jpg',
+        'img/alcool-gel.jpg',
         [
           { tamanho: '500ML', preco: 12 },
           { tamanho: '1L', preco: 20 }
@@ -3508,7 +3508,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
     <div class="produto limpeza"
      data-nomes="alcool perfumado concentrado, alcool concentrado, limpeza, casa">
 
-  <img src="img/inspira.jpg" alt="Inspira Gel de Pinho">
+  <img src="img/inspira-gel.jpg" alt="Inspira Gel de Pinho">
   <span class="icone-busca">🔍</span>
   <h3>Inspira Gel de Pinho</h3>
 
@@ -3519,7 +3519,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         'inspira-gel-500ml',
         'Inspira Gel de Pinho 500ML',
         16,
-        'img/inspira.jpg',
+        'img/inspira-gel.jpg',
         [
           { tamanho: '500ML', preco: 16 },
         ],
@@ -3646,7 +3646,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
 <div class="produto limpeza"
      data-nomes="inseticida, inseticida spray, mata inseto, repelente, mosquito">
 
-  <img src="img/insenticida.jpg" alt="Insenticida 350ML">
+  <img src="img/inseticida.jpg" alt="Insenticida 350ML">
   <span class="icone-busca">🔍</span>
   <h3>Insenticida 350ML</h3>
 
@@ -3657,7 +3657,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         'insenticida',
         'Insenticida 350ML',
         16,
-        'img/insenticida.jpg',
+        'img/inseticida.jpg',
         [
           { tamanho: 'Insenticida 350ML', preco: 16 },
         ],
@@ -4136,7 +4136,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Luvas</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 9,00</span>
+      <span>R$ 9,00</span>
       <button onclick="addProduto(
         'luvas-m','Luvas M',9,'img/luvas-m.jpg',
         [{tamanho:'M', preco:9}],'M')">Adicionar</button>
@@ -4172,7 +4172,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Limpa Forno Diabo Verde</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 23,00</span>
+      <span>R$ 23,00</span>
       <button onclick="addProduto(
         'limpa-forno-diabo-verde','Limpa Forno Diabo Verde',23,'img/diabo-verde.jpg',
         [{tamanho:'Unid.', preco:23}],'Unid.')">Adicionar</button>
@@ -4187,7 +4187,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Limpa Forno Spray</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 25,00</span>
+      <span>R$ 25,00</span>
       <button onclick="addProduto(
         'limpa-forno-spray','Limpa Forno Spray',25,'img/limpa-forno-spray.jpg',
         [{tamanho:'Unid.', preco:25}],'Unid.')">Adicionar</button>
@@ -4271,7 +4271,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Pano de Prato</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 4,50</span>
+      <span>R$ 4,50</span>
       <button onclick="addProduto(
         'pano-prato','Pano de Prato',4.5,'img/pano-prato.jpg',
         [{tamanho:'Unid.', preco:4.5}],'Unid.')">Adicionar</button>
@@ -4286,7 +4286,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Kit de Pano Multiuso 3 Unid.</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 14,00</span>
+      <span>R$ 14,00</span>
       <button onclick="addProduto(
         'kit-pano-multiuso-3un','Kit Pano Multiuso 3 Unid.',14,'img/multiuso-3.jpg',
         [{tamanho:'3 Unid.', preco:14}],'3 Unid.')">Adicionar</button>
@@ -4301,7 +4301,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Flanela</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 4,00</span>
+      <span>R$ 4,00</span>
       <button onclick="addProduto(
         'flanela','Flanela',4,'img/flanela.jpg',
         [{tamanho:'Unid.', preco:4}],'Unid.')">Adicionar</button>
@@ -4337,7 +4337,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Panos Multiuso 2 Unid.</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 10,00</span>
+      <span>R$ 10,00</span>
       <button onclick="addProduto(
         'pano-multiuso-2un','Pano Multiuso 2 Unid.',10,'img/pano-multiuso.jpg',
         [{tamanho:'2 Unid.', preco:10}],'2 Unid.')">Adicionar</button>
@@ -4353,7 +4353,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-porta-detergente">📦 Estoque: 5</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 15,00</span>
+      <span>R$ 15,00</span>
       <button onclick="addProduto(
         'porta-detergente','Porta Detergente',15,'img/porta-detergente.jpg',
         [{tamanho:'Unid.', preco:15}],'Unid.')">Adicionar</button>
@@ -4464,7 +4464,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-sanduicheira">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 110,00</span>
+      <span>R$ 110,00</span>
       <button onclick="addProduto(
         'sanduicheira','Sanduicheira',110,'img/sanduicheira.jpg',
         [{tamanho:'Unid.', preco:110}],'Unid.')">Adicionar</button>
@@ -4480,7 +4480,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <p class="estoque" id="estoque-varal-chao-abas">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 135,00</span>
+      <span>R$ 135,00</span>
       <button onclick="addProduto(
         'varal-chao-abas','Varal de Chão com Abas',135,'img/varal-de-chao.jpg',
         [{tamanho:'Unid.', preco:135}],'Unid.')">Adicionar</button>
@@ -4495,7 +4495,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Varal Íntimo</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 17,00</span>
+      <span>R$ 17,00</span>
       <button onclick="addProduto(
         'varal-intimo','Varal Íntimo',17,'img/varal-intimo.jpg',
         [{tamanho:'Unid.', preco:17}],'Unid.')">Adicionar</button>
@@ -4552,7 +4552,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Kit Limpeza para Crianças Vassoura, Rodo e Pá</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 30,00</span>
+      <span>R$ 30,00</span>
       <button onclick="addProduto(
         'kit-limpeza-infantil','Kit Limpeza para Crianças',30,'img/kit-para-crianca.jpg',
         [{tamanho:'Unid.', preco:30}],'Unid.')">Adicionar</button>
@@ -4627,7 +4627,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Pá</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 12,00</span>
+      <span>R$ 12,00</span>
       <button onclick="addProduto(
         'pa-lixo','Pá',12,'img/pa.jpg',
         [{tamanho:'Unid.', preco:12}],'Unid.')">Adicionar</button>
@@ -4711,7 +4711,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Escova de Roupa</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 6,00</span>
+      <span>R$ 6,00</span>
       <button onclick="addProduto(
         'escova-roupa','Escova de Roupa',6,'img/escova-de-roupa.jpg',
         [{tamanho:'Unid.', preco:6}],'Unid.')">Adicionar</button>
@@ -4726,7 +4726,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <h3>Escova de Roupa Com Cabo</h3>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 15,00</span>
+      <span>R$ 15,00</span>
       <button onclick="addProduto(
         'escova-roupa-cabo','Escova de Roupa com Cabo',15,'img/escova-roupa.jpg',
         [{tamanho:'Unid.', preco:15}],'Unid.')">Adicionar</button>
@@ -4836,7 +4836,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
    <p class="estoque" id="estoque-cesto-60l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 40,00</span>
+      <span>R$ 40,00</span>
       <button onclick="addProduto(
         'cesto-roupa-60l','Cesto de Roupa 60 LTS',40,'img/cesto-60.jpg',
         [{tamanho:'60 LTS', preco:40}],'60 LTS')">Adicionar</button>
@@ -4852,7 +4852,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
    <p class="estoque" id="estoque-cesto-fechado-65l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 65,00</span>
+      <span>R$ 65,00</span>
       <button onclick="addProduto(
         'cesto-roupa-fechado-65l','Cesto de Roupa Fechado 65 LTS',65,'img/cesto-fechado.jpg',
         [{tamanho:'65 LTS', preco:65}],'65 LTS')">Adicionar</button>
@@ -4868,7 +4868,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
    <p class="estoque" id="estoque-lixeira-9l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 30,00</span>
+      <span>R$ 30,00</span>
       <button onclick="addProduto(
         'lixeira-9l','Lixeira 9 LTS',30,'img/lixeira-9.jpg',
         [{tamanho:'9 LTS', preco:30}],'9 LTS')">Adicionar</button>
@@ -4884,7 +4884,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
    <p class="estoque" id="estoque-lixeira-suporte">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 40,00</span>
+      <span>R$ 40,00</span>
       <button onclick="addProduto(
         'lixeira-suporte','Lixeira com Suporte para Pendurar',40,'img/lixeira-suporte.jpg',
         [{tamanho:'Unid.', preco:40}],'Unid.')">Adicionar</button>
@@ -4900,7 +4900,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
    <p class="estoque" id="estoque-lixeira-12l">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
-      <span> — R$ 30,00</span>
+      <span>R$ 30,00</span>
       <button onclick="addProduto(
         'lixeira-12l','Lixeira 12 LTS',30,'img/lixeira-12.jpg',
         [{tamanho:'12 LTS', preco:30}],'12 LTS')">Adicionar</button>
@@ -5149,6 +5149,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/kit-pano-de-banheiro-branco.jpg" alt="Tapete de Banheiro 3 Peças Antiderrapante Branco">
   <span class="icone-busca">🔍</span>
   <h3>Tapete de Banheiro 3 Peças Antiderrapante Branco</h3>
+   <p class="estoque" id="estoque-tapete-banheiro-3pcs-branco">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 60,00</span>
@@ -5164,6 +5165,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/kit-pano-de-banheiro-preto.jpg" alt="Tapete de Banheiro 3 Peças Antiderrapante Preto">
   <span class="icone-busca">🔍</span>
   <h3>Tapete de Banheiro 3 Peças Antiderrapante Preto</h3>
+  <p class="estoque" id="estoque-tapete-banheiro-3pcs-preto">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 60,00</span>
