--- a/index.html
+++ b/index.html
@@ -4095,6 +4095,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/papel-toalha.jpg" alt="Papel Toalha">
   <span class="icone-busca">🔍</span>
   <h3>Papel Toalha</h3>
+  <p class="estoque" id="estoque-papel-toalha">📦 Estoque: 4</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 17,00</span>
@@ -4111,7 +4112,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/papel-toalha-1000.jpg" alt="Papel Toalha 1000 Folhas">
   <span class="icone-busca">🔍</span>
   <h3>Papel Toalha 1000 Folhas</h3>
-
+<p class="estoque" id="estoque-papel-toalha-1000-folhas">📦 Estoque: 5</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 15,00</span>
@@ -4550,6 +4551,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/kit-para-crianca.jpg" alt="Kit Limpeza Para crianças Vassoura, Rodo e Pá">
   <span class="icone-busca">🔍</span>
   <h3>Kit Limpeza para Crianças Vassoura, Rodo e Pá</h3>
+    <p class="estoque" id="estoque-kit-limpeza-crianca">📦 Estoque: 2</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 30,00</span>
@@ -4921,6 +4923,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/papel-higienico.jpg" alt="Papel Higiênico">
   <span class="icone-busca">🔍</span>
   <h3>Papel Higiênico</h3>
+  <p class="estoque" id="estoque-papel-higienico">📦 Estoque: 4</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 30,00</span>
@@ -4937,7 +4940,7 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
   <img src="img/papel-higienico-8.jpg" alt="Papel Higiênico Institucional 8 Rolos-">
   <span class="icone-busca">🔍</span>
   <h3>Papel Higiênico Institucional 8 Rolos</h3>
-
+  <p class="estoque" id="estoque-papel-higienico-8-rolos">📦 Estoque: 6</p>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 45,00</span>
@@ -5288,6 +5291,12 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
         'essencia-nogueira-orquidea-negra','Essência Nogueira Orquídea Negra',10,'img/essencia-nogueira.jpg',
         [{tamanho:'Orquídea Negra', preco:10}],'Orquídea Negra')">Adicionar</button>
     </div>
+     <div class="linha">
+      <span>Essen. Nogueira Chá Branco — R$ 10,00</span>
+      <button onclick="addProduto(
+        'essencia-nogueira-cha-branco','Essência Nogueira Chá Branco',10,'img/essencia-nogueira.jpg',
+        [{tamanho:'Chá Branco', preco:10}],'Chá Branco')">Adicionar</button>
+    </div>
   </div>
 </div>
 
@@ -5516,14 +5525,14 @@ data-nomes="lysoform, desinfetante lysoform, lisoform">
 
 <!-- Silicone Clineza -->
 <div class="produto automotivo" data-nomes="silicone clineza, silicone, brilho, carro">
-  <img src="img/desinfetante-casa.jpg" alt="Silicone Clineza">
+  <img src="img/silicone-clineza.jpg" alt="Silicone Clineza">
   <span class="icone-busca">🔍</span>
   <h3>Silicone Clineza</h3>
   <div class="variacoes">
     <div class="linha">
       <span>R$ 15,00</span>
       <button onclick="addProduto(
-        'silicone-clineza','Silicone Clineza',15,'img/desinfetante-casa.jpg',
+        'silicone-clineza','Silicone Clineza',15,'img/silicone-clineza.jpg',
         [{tamanho:'Único', preco:15}],'Único')">Adicionar</button>
     </div>
   </div>
